--- a/css/styles.css
+++ b/css/styles.css
@@ -68,17 +68,14 @@ body {
   color: var(--accent-text-color);
   margin: 24px 93px 25px 0px;
 }
-.anchor {
-  width: 294px;
-}
-.anchor > li {
-  margin: 0 25px;
+
+.anchor-item:not(:last-child) {
+  margin-right: 25px;
 }
 .mailtel {
   margin-left: auto;
-  margin-right: -50px;
 }
-.mailtel > li {
+.mailtel-item:not(:last-child) {
   margin-right: 50px;
 }
 .nav-link {
@@ -150,10 +147,8 @@ body {
   border-style: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  margin-right: 500px;
-  margin-left: 500px;
-
-  /*border-style: none;*/
+  margin: auto;
+  display: block;
 }
 .hero-button:hover {
   background-color: var(--button-hover);
@@ -163,11 +158,9 @@ body {
 .feat-cont {
   display: flex;
 }
-.group-feature:not(:first-child) {
-  margin-left: 15px;
-}
+
 .group-feature:not(:last-child) {
-  margin-right: 15px;
+  margin-right: 30px;
 }
 .group-feature {
   width: 270px;
@@ -192,12 +185,7 @@ body {
 }
 .our-work {
   display: flex;
-}
-.example:not(:last-child) {
-  margin-right: 15px;
-}
-.example:not(:first-child) {
-  margin-left: 15px;
+  justify-content: space-between;
 }
 
 /*section-member*/
@@ -206,6 +194,7 @@ body {
 }
 .members {
   display: flex;
+  justify-content: space-between;
 }
 .cards {
   background-color: var(--main-background);
@@ -213,12 +202,6 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   padding-bottom: 30px;
-}
-.cards:not(:first-child) {
-  margin-left: 15px;
-}
-.cards:not(:last-child) {
-  margin-right: 15px;
 }
 .member-name {
   color: var(--title-text-color);
@@ -233,6 +216,7 @@ body {
   font-size: 16px;
   text-align: center;
 }
+
 /*footer*/
 .footer-container {
   display: flex;
@@ -268,11 +252,12 @@ body {
 .span-footer {
   color: var(--main-background);
 }
+
 /*portfolio-page*/
 .filter {
   display: flex;
   justify-content: center;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
 .btn-filter {
   background-color: var(--section-background);
@@ -298,12 +283,10 @@ body {
   line-height: 2;
   color: var(--title-text-color);
   letter-spacing: 0.06em;
-  margin: 20px 24px 4px 24px;
 }
 .project-type {
   font-size: 16px;
   line-height: 1.8;
-  margin: 4px 24px 20px 24px;
 }
 .portfolio-card {
   display: flex;
@@ -314,5 +297,12 @@ body {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc((100% - 90px) / 3);
+}
+.text-card {
+  border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  padding-left: 24px;
+  padding-bottom: 20px;
+  padding-top: 20px;
 }
